Update 'k4je2giz9-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:9cd627e798960f0ad1ed9c645177a80bd21d5cb1@sha256:9d66ea0de69273ff83be38e83d086f69fe7815861d068c364b63a5b05f002871

--- a/components/k4je2giz9-python/overlays/development/deployment-patch.yaml
+++ b/components/k4je2giz9-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: k4je2giz9-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:9cd627e798960f0ad1ed9c645177a80bd21d5cb1@sha256:9d66ea0de69273ff83be38e83d086f69fe7815861d068c364b63a5b05f002871
+          name: container-image
